--- a/scss/style.css
+++ b/scss/style.css
@@ -50,10 +50,16 @@ a {
 }
 
 .header_wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   min-height: 75px;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .header_logo {
@@ -71,6 +77,8 @@ a {
 }
 
 .brand {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin: 0 auto;
   max-width: 1600px;
@@ -80,9 +88,15 @@ a {
 .brand_title-wrapper {
   padding: 0 0 0 40px;
   background-color: var(--pink);
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .brand_title {
@@ -106,9 +120,14 @@ a {
 }
 
 .offers_list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .offers_item {
@@ -117,9 +136,15 @@ a {
   background-color: var(--brown);
   color: white;
   margin: 0 0 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .offers_item__woman {
@@ -155,9 +180,16 @@ a {
 
 .products {
   margin: 67px auto 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .products_title {
@@ -174,33 +206,49 @@ a {
 
 .products_list {
   margin: 48px 0 0 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .products_item {
   width: 360px;
   min-height: 582px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   background-color: #f8f8f8;
   margin: 0 0 30px 0;
 }
 
 .products_card-about {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  flex-grow: 1;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   padding: 0 0 0 16px;
 }
 
 .products_card-title {
   font-size: 13px;
   line-height: 16px;
-
   text-transform: uppercase;
 }
 
@@ -224,7 +272,6 @@ a {
   border: 1px solid var(--dark-pink);
   padding: 14px 39px;
   display: inline-block;
-
   margin: 10px auto 90px;
 }
 
@@ -233,16 +280,27 @@ a {
 }
 
 .attract_list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
 .attract_item {
   width: 360px;
   height: 134px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 100px 2px;
 }
 
@@ -251,6 +309,7 @@ a {
   line-height: 24px;
   color: var(--white);
 }
+
 .attract_text {
   font-weight: 300;
   font-size: 14px;
@@ -267,9 +326,14 @@ a {
 }
 
 .subscribe {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   min-height: 450px;
 }
 
@@ -284,12 +348,16 @@ a {
 }
 
 .subscribe_quote {
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   max-width: 360px;
 }
 
 .subscribe_card {
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 .quote_text {
@@ -348,9 +416,15 @@ a {
 .footer {
   background-color: var(--dark-blue);
   min-height: 80px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .footer_text {
@@ -360,6 +434,8 @@ a {
 }
 
 .footer_list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -378,12 +454,15 @@ a {
 }
 
 /* registration */
-
 .preheader {
   min-height: 148px;
   background-color: var(--pink);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .preheader_text {
@@ -395,102 +474,24 @@ a {
 }
 
 .registration {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  margin: 64px auto 96px;
 }
 
 .registration_form {
   font-weight: 300;
   font-size: 16px;
   line-height: 19px;
-  color: var(--black);
-  width: 360px;
-}
-
-.registration_input {
-  padding: 13px 18px;
-}
-
-.registraion_label {
-  font-weight: 300;
-  font-size: 13px;
-  line-height: 16px;
-  color: #b1b1b1;
-  margin: 15px auto 39px;
-  display: block;
-}
-
-.registration_field {
-  width: 360px;
-  height: 149px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  color: var(--white);
 }
 
 .registration_input {
   display: block;
-}
-
-.radio_label + .registration_radio {
-  margin-left: 20px;
-}
-
-.registration_radio {
-  margin: 31px 2px 31px 2px;
-}
-
-.radio_label {
-  margin-right: 20px;
 }
 
 .registration_button {
   text-transform: uppercase;
   background-color: var(--dark-pink);
-  color: var(--white);
-  padding: 12px 50px 12px 12px;
-  position: relative;
 }
-
-.registration_button__arrow {
-  position: absolute;
-  top: 13px;
-  right: 10px;
-}
-
-.information {
-  margin: 0 0 0 128px;
-  width: 652px;
-}
-
-.information_title {
-  text-transform: uppercase;
-  font-size: 16px;
-  font-weight: 300;
-  line-height: 19px;
-  letter-spacing: 0em;
-}
-
-.information_text {
-  font-weight: 300;
-  font-size: 16px;
-  line-height: 19px;
-  margin: 32px 0 22px;
-}
-
-.information_list {
-  font-weight: 300;
-  font-size: 16px;
-  line-height: 19px;
-}
-
-.information_item {
-  margin: 0 0 16px 28px;
-  position: relative;
-}
-
-.information_item:before {
-  content: url(../img/ok.svg);
-  position: absolute;
-  left: -28px;
-}
+/*# sourceMappingURL=style.css.map */
