--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,1 +1,501 @@
-@import "./reset.css";
+@import "./_general";
+@import "./mixins";
+@import "./variables";
+@import "./_reset";
+
+:root  {
+  --dark-blue: #222222;
+  --pink: #f1e4e6;
+  --dark-pink: #f16d7f;
+  --brown: #474040;
+  --black: #222224;
+  --white: #fbfbfb;
+}
+
+.text {
+  font-family: Lato;
+  font-style: normal;
+  font-weight: normal;
+  font-family: Lato;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+.container {
+  width: 1138px;
+  margin: 0 auto;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
+}
+
+.header {
+  background-color: var(--dark-blue);
+}
+
+.header_controls {
+  fill: var(--white);
+}
+
+.header_controls:hover {
+  fill: var(--dark-pink);
+}
+
+.header_wrapper {
+  display: flex;
+  align-items: center;
+  min-height: 75px;
+  justify-content: space-between;
+}
+
+.header_logo {
+  margin: 0 10px 0 0;
+}
+
+.header_button {
+  background-color: transparent;
+  border: none;
+  margin: 0 34px 0 0;
+}
+
+.header_person-link {
+  margin: 0 34px 0 0;
+}
+
+.brand {
+  display: flex;
+  margin: 0 auto;
+  max-width: 1600px;
+  margin: 0 auto 76px;
+}
+
+.brand_title-wrapper {
+  padding: 0 0 0 40px;
+  background-color: var(--pink);
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+}
+
+.brand_title {
+  font-size: 44px;
+  line-height: 53px;
+  text-transform: uppercase;
+  color: #222222;
+  border-left: 12px solid var(--dark-pink);
+  padding: 0 0 0 16px;
+}
+
+.brand_subtitle {
+  display: block;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 29px;
+}
+
+.brand_subtitle__pink {
+  color: var(--dark-pink);
+}
+
+.offers_list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.offers_item {
+  width: 360px;
+  min-height: 264px;
+  background-color: var(--brown);
+  color: white;
+  margin: 0 0 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.offers_item__woman {
+  background-image: url(../img/offers-women.png);
+}
+
+.offers_item__man {
+  background-image: url(../img/offer-men.jpg);
+}
+
+.offers_item__kids {
+  background-image: url(../img/offers-kids.jpg);
+}
+
+.offers_item__accesories {
+  background-image: url(../img/offers-accesories.jpg);
+  width: 100%;
+}
+
+.offers_title {
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.offers_subtitle {
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 29px;
+  color: #f16d7f;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.products {
+  margin: 67px auto 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.products_title {
+  font-size: 30px;
+  line-height: 36px;
+  text-align: center;
+}
+
+.products_subtitle {
+  font-size: 14px;
+  line-height: 17px;
+  text-align: center;
+}
+
+.products_list {
+  margin: 48px 0 0 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.products_item {
+  width: 360px;
+  min-height: 582px;
+  display: flex;
+  flex-direction: column;
+
+  background-color: #f8f8f8;
+  margin: 0 0 30px 0;
+}
+
+.products_card-about {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  flex-grow: 1;
+  padding: 0 0 0 16px;
+}
+
+.products_card-title {
+  font-size: 13px;
+  line-height: 16px;
+
+  text-transform: uppercase;
+}
+
+.products_text {
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 17px;
+  color: #5d5d5d;
+}
+
+.products_price {
+  font-size: 16px;
+  line-height: 19px;
+  color: var(--dark-pink);
+}
+
+.products_button {
+  font-size: 16px;
+  line-height: 19px;
+  color: var(--dark-pink);
+  border: 1px solid var(--dark-pink);
+  padding: 14px 39px;
+  display: inline-block;
+
+  margin: 10px auto 90px;
+}
+
+.attract {
+  background-color: var(--black);
+}
+
+.attract_list {
+  display: flex;
+}
+
+.attract_item {
+  width: 360px;
+  height: 134px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 100px 2px;
+}
+
+.attract_title {
+  font-size: 19.96px;
+  line-height: 24px;
+  color: var(--white);
+}
+.attract_text {
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 17px;
+  color: var(--white);
+  text-align: center;
+}
+
+.subscribe_page {
+  background-image: url(../img/subscribe.png);
+  background-repeat: no-repeat;
+  margin: 0 auto;
+  background-size: cover;
+}
+
+.subscribe {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 450px;
+}
+
+.subscribe_face {
+  width: 96px;
+  height: 96px;
+  background-color: #dbd2d2;
+  background-image: url(../img/face.jpg);
+  text-align: center;
+  margin: 0 auto 30px;
+  border-radius: 50%;
+}
+
+.subscribe_quote {
+  flex-grow: 1;
+  max-width: 360px;
+}
+
+.subscribe_card {
+  flex-grow: 1;
+}
+
+.quote_text {
+  font-size: 20px;
+  line-height: 24px;
+  text-align: center;
+}
+
+.quote_text__italic {
+  font-style: italic;
+}
+
+.subscribe_title {
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 167.2%;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.subscribe_subtitle {
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 167.2%;
+  text-transform: uppercase;
+}
+
+.subscribe_form {
+  position: relative;
+  margin-top: 32px;
+  width: 340px;
+  min-height: 49px;
+  font-size: 14px;
+  line-height: 17px;
+}
+
+.subscribe_input {
+  min-height: 49px;
+  padding: 6px 22px;
+  border-top-left-radius: 22px;
+  border-bottom-left-radius: 22px;
+  border-right: none;
+}
+
+.subscribe_button {
+  min-height: 65px;
+  position: absolute;
+  background-color: var(--dark-pink);
+  color: var(--white);
+  border-left: none;
+  padding: 6px 22px;
+  border-top-right-radius: 22px;
+  border-bottom-right-radius: 22px;
+}
+
+.footer {
+  background-color: var(--dark-blue);
+  min-height: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer_text {
+  font-size: 16px;
+  line-height: 19px;
+  color: var(--white);
+}
+
+.footer_list {
+  display: flex;
+}
+
+.footer_item {
+  width: 32px;
+  height: 32px;
+  margin: 0 0 0 5px;
+}
+
+.footer_link {
+  fill: var(--white);
+}
+
+.footer_link:hover {
+  fill: var(--dark-pink);
+}
+
+/* registration */
+
+.preheader {
+  min-height: 148px;
+  background-color: var(--pink);
+  display: flex;
+  align-items: center;
+}
+
+.preheader_text {
+  font-size: 24px;
+  line-height: 29px;
+  color: var(--dark-pink);
+  text-align: left;
+  text-transform: uppercase;
+}
+
+.registration {
+  display: flex;
+  margin: 64px auto 96px;
+}
+
+.registration_form {
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 19px;
+  color: var(--black);
+  width: 360px;
+}
+
+.registration_input {
+  padding: 13px 18px;
+}
+
+.registraion_label {
+  font-weight: 300;
+  font-size: 13px;
+  line-height: 16px;
+  color: #b1b1b1;
+  margin: 15px auto 39px;
+  display: block;
+}
+
+.registration_field {
+  width: 360px;
+  height: 149px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.registration_input {
+  display: block;
+}
+
+.radio_label + .registration_radio {
+  margin-left: 20px;
+}
+
+.registration_radio {
+  margin: 31px 2px 31px 2px;
+}
+
+.radio_label {
+  margin-right: 20px;
+}
+
+.registration_button {
+  text-transform: uppercase;
+  background-color: var(--dark-pink);
+  color: var(--white);
+  padding: 12px 50px 12px 12px;
+  position: relative;
+}
+
+.registration_button__arrow {
+  position: absolute;
+  top: 13px;
+  right: 10px;
+}
+
+.information {
+  margin: 0 0 0 128px;
+  width: 652px;
+}
+
+.information_title {
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 19px;
+  letter-spacing: 0em;
+}
+
+.information_text {
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 19px;
+  margin: 32px 0 22px;
+}
+
+.information_list {
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 19px;
+}
+
+.information_item {
+  margin: 0 0 16px 28px;
+  position: relative;
+}
+
+.information_item:before {
+  content: url(../img/ok.svg);
+  position: absolute;
+  left: -28px;
+}
