--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,3 +4,7 @@ $dark-pink: #f16d7f;
 $brown: #474040;
 $black: #222224;
 $white: #fbfbfb;
+
+$desktop-width: 1600px;
+$tablet-width: 768px;
+$mobile-width: 375px;
