--- a/css/style.css
+++ b/css/style.css
@@ -301,6 +301,10 @@ a {
   background-color: #222222;
 }
 
+.logo:hover {
+  transform: scale(1.2);
+}
+
 .header_controls {
   fill: #fbfbfb;
 }
@@ -324,6 +328,7 @@ a {
   background-color: transparent;
   border: none;
   margin: 0 34px 0 0;
+  cursor: pointer;
 }
 
 .header_person-link {
@@ -441,8 +446,7 @@ a {
   color: #f16d7f;
 }
 
-.header_navigation {
-  display: none;
+.navigation {
   position: relative;
   background-color: #ffffff;
   display: flex;
@@ -515,19 +519,23 @@ a {
 
 .offers_item__woman {
   background-image: url(../img/offers-women.png);
+  background-size: cover;
 }
 
 .offers_item__man {
   background-image: url(../img/offer-men.jpg);
+  background-size: cover;
 }
 
 .offers_item__kids {
   background-image: url(../img/offers-kids.jpg);
+  background-size: cover;
 }
 
 .offers_item__accesories {
   background-image: url(../img/offers-accesories.jpg);
   width: 100%;
+  min-height: 181px;
 }
 
 .offers_title {
@@ -591,12 +599,61 @@ a {
   }
 }
 
+.products_item_wrapper {
+  position: relative;
+}
+
+.products_item_wrapper:hover .products_overlay,
+.products_item_wrapper:hover .products_addCart {
+  display: flex;
+}
+
+.products_overlay {
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  top: 0;
+  position: absolute;
+  display: none;
+}
+
+.products_img {
+  width: 100%;
+  height: auto;
+}
+
+.products_addCart {
+  position: absolute;
+  width: 140px;
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+  border: 1px solid #fbfbfb;
+  font-size: 14px;
+  line-height: 17px;
+  color: #fbfbfb;
+  background-color: rgba(58, 56, 56, 0.86);
+  top: 40%;
+  left: 33%;
+  display: none;
+}
+
+.products_addCart:hover {
+  transform: scale(1.3);
+}
+
+.products_addCart__text {
+  margin: 0 0 0 11px;
+  align-self: center;
+}
+
 .products_card-about {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   flex-grow: 1;
   padding: 0 0 0 16px;
+  min-height: 160px;
 }
 
 .products_card-title {
@@ -628,12 +685,18 @@ a {
   margin: 10px auto 90px;
 }
 
+.products_button:hover {
+  background-color: #f16d7f;
+  color: #fbfbfb;
+}
+
 .attract {
   background-color: #222224;
 }
 
 .attract_list {
   display: flex;
+  justify-content: center;
 }
 
 @media (max-width: 768px) {
@@ -792,6 +855,12 @@ a {
   padding: 6px 22px;
   border-top-right-radius: 22px;
   border-bottom-right-radius: 22px;
+}
+
+.subscribe_button:hover {
+  background-color: #fbfbfb;
+  color: #f16d7f;
+  cursor: pointer;
 }
 
 .footer {
@@ -1030,6 +1099,12 @@ a {
   width: 59%;
 }
 
+@media (max-width: 375px) {
+  .card-description {
+    padding: 5px 5px;
+  }
+}
+
 .card-description_top {
   display: flex;
   justify-content: space-between;
@@ -1056,13 +1131,18 @@ a {
 }
 
 .cart_button {
+  margin: 20px 0 0 0;
   text-transform: uppercase;
-  width: 235px;
-  padding: 17px 39px;
+  width: 225px;
+  padding: 10px 15px;
   font-weight: 300;
-  font-size: 14px;
-  line-height: 17px;
-  border: 1px solid #a4a4a4;
+  border: 1px solid #474040;
+  font-weight: 300;
+  font-size: 11px;
+  line-height: 13px;
+  background-color: #fbfbfb;
+  color: #222224;
+  text-decoration: none;
 }
 
 .buttons {
@@ -1094,7 +1174,6 @@ a {
   flex-direction: column;
   justify-content: space-between;
   min-height: 272px;
-  width: 44%;
 }
 
 @media (max-width: 375px) {
@@ -1119,7 +1198,6 @@ a {
   margin: 57px 0 0 0;
   background-color: #f5f3f3;
   padding: 39px 34px;
-  width: 44%;
   align-self: center;
 }
 
