--- a/scss/blocks/_offers.scss
+++ b/scss/blocks/_offers.scss
@@ -44,6 +44,7 @@
   background-image: url(../img/offers-accesories.jpg);
   width: 100%;
   min-height: 181px;
+  background-size: cover;
 }
 
 .offers_title {
